# papilo

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG  CLAUDE.md  CMakeLists.txt  Format.md  Makefile  README.md  change_version.sh  example.mps  flug_red.mps  makedist.sh  papilo-config.cmake.in  parameters.txt  solutions.test
.github/workflows/: build.yml  clang-format.yml
.gitlab/merge_request_templates/: Code_Review.md  Default.md
Paper/: CliqueProbing.test  logParser.py
binaries/: CMakeLists.txt
check/: PapiloSolver.py  README_PERFORMANCE.md  check.awk  check.sh  check_cluster.sh  configuration_cluster.sh  configuration_logfiles.sh  configuration_set.sh  configuration_solufile.sh  evalcheck_cluster.sh  evaluate.sh  groupsettings_papilo_evaluation.xml  jenkins_check_results_cmake.sh  jenkins_failcheck_cmake.sh  papilo_evaluation.xml  run.sh  waitcluster.sh  wakeup-slurm
check/VeriPB/: example.opb  example.pbp  run_veripb.sh  test.sh  verify_files_with_veripb.sh
check/instances/IP/: air01.opb  air02.opb  air03.opb  air06.opb  bm23.opb  cracpb1.opb  enigma.opb  lseu.opb  pipex.opb
check/instances/Indicator/: mcf64-4-1.lp
check/instances/PseudoBoolean/: all_diff.opb  optimization.opb
check/ipet/: PapiloSolver.py  ScullySolver.py  papilo_evaluation.xml  papilo_evaluation_solver_specific.xml  scully_evaluation.xml
check/parser/: lock.py
check/testset/: great_diff.test
cmake/: Dependencies.cmake  StdAtomic.cmake
cmake/Modules/: FindBoost.cmake  FindGMP.cmake  FindGUROBI.cmake  FindQuadmath.cmake  FindTBB.cmake
make/: make.detecthost  make.project
make/local/: make.targets
scripts/: change_version.sh  increment_apiversion.sh  makedist.sh  updatedates.sh
settings/: con_abstol_1e-4+fixed_int_term_200.set  con_abstol_1e-4+fixed_int_term_2000.set  con_abstol_1e-4+fixed_int_term_no.set  con_abstol_1e-4.set  convex_combination_donotuse.set  convex_combination_use.set  copy_conflicts_to_problem.set  cutoff_constraint.set  default.set  fixed_int_term_200.set  fixed_int_term_2000.set  fixed_int_term_no.set  hard_cons_no+con_abstol_1e-4+fixed_int_term_200.set  hard_cons_no+con_abstol_1e-4+fixed_int_term_2000.set  hard_cons_no+con_abstol_1e-4+fixed_int_term_no.set  hard_cons_no+con_abstol_1e-4.set  hard_cons_no+fixed_int_no.set  hard_cons_no+fixed_int_term_200.set  hard_cons_no+fixed_int_term_2000.set  hard_constraints_no_detection.set  lp_presolvers_with_basis.set  lp_presolvers_without_basis.set  no_dual_presolvers.txt  no_dual_reductions.set  no_strong_dual_reductions.set  only_propagation.set  presolve_without_abort.set  presolvers_dual_postsolve.set  roundingsat.set  scip_no_strong_dual_reductions.set  scip_settings.set  sequential.set  sequential_deterministic.set  sequential_immediately.set  sequentiell.set  sequentiell_deterministic.set  trivial.set  vary_hard_constraint_threshold.set  veri_empty.set  veri_only_fixings.set  (+3 more)
src/: StartFixAndPropagate.cpp  StartMipComp.cpp  StartVolumeAlgorithm.cpp  convMPS.cpp  duplicates.cpp  papilo.cpp  papilolib.cpp  papilolib.h  propagateAndFix.cpp
src/fix/: Algorithm.hpp  AlgorithmParameter.hpp  AnalyzeConflict.hpp  ConflictAnalysis.hpp  Constraint.hpp  FixAndPropagate.hpp  FixAndPropagateApi.cpp  FixAndPropagateApi.h  FixAndPropagateApi.hpp  Heuristic.hpp  InfeasibleCopyStrategy.hpp  PresolveApi.cpp  PresolveApi.h  RandomGenerator.hpp  VectorMultiplication.hpp  VolumeAlgorithm.hpp  VolumeAlgorithmParameter.hpp
src/fix/strategy/: ConflictDivingStrategy.hpp  FarkasRoundingStrategy.hpp  FarkasStrategy.hpp  FractionalRoundingStrategy.hpp  LeastFractionalRoundingStrategy.hpp  MostFractionalRoundingStrategy.hpp  RandomRoundingStrategy.hpp  RoundingStrategy.hpp
src/papilo/: CMakeConfig.hpp.in  Config.hpp  Config.hpp.in
src/papilo/core/: BoundStorage.hpp  CliqueProbingView.cpp  CliqueProbingView.hpp  Components.hpp  ConstraintMatrix.cpp  ConstraintMatrix.hpp  EarlyPresolveTerminationException.hpp  Fixing.hpp  MatrixBuffer.hpp  Objective.hpp  Postsolve.cpp  Postsolve.hpp  Presolve.cpp  Presolve.hpp  PresolveMethod.hpp  PresolveOptions.hpp  ProbingView.cpp  ProbingView.hpp  Problem.hpp  ProblemBuilder.hpp  ProblemFlag.hpp  ProblemUpdate.cpp  (+14 more)
src/volume/: VolumeAlgorithm.hpp
test/: Aggregation.cpp  CMakeLists.txt  CoefStren.cpp  Common.cpp  NumericalStatistics.cpp  PapiloLib.cpp  ParallelRows.cpp  SparseStorage.cpp  TestMain.cpp  VectorUtils.cpp  check_CmakeConfig_includes.sh
test/VeriPB/: domcol.opb  negdomcol.opb  negdomcol.pbp  simpleprobing.opb  simpleprobing.pbp
test/fix/: ConflictAnalysisTest.cpp  FixAndPropagateApiTest.cpp  FixAndPropagateIT.cpp  FixAndPropagateTest.cpp  HeuristicTest.cpp  VectorMultiplicationTest.cpp  VolumeAlgorithmTest.cpp
test/fix/c_interface/: CMakeLists.txt  main.c
test/instances/: Instances.hpp  api_test.mps  bell5.hpp  blend2.hpp  dcmulti.hpp  egout.hpp  enigma.hpp  flugpl.hpp  gt2.hpp  knapsack.opb  lseu.hpp  misc03.hpp  neg_objective.opb  p0548.hpp  pos_objective.opb  presolved.mps  rgn.hpp  simple_subsitution_gdc_detection.mps
test/instances/solutions/: bell5.sol  blend2.sol  dcmulti.sol  egout.sol  enigma.sol  flugpl.sol  gt2.sol  misc03.sol  p0548.sol  rgn.sol
test/papilo/: DebugTest.cpp  InstancesTest.cpp
test/papilo/core/: MatrixBufferTest.cpp  PostsolveTest.cpp  PresolveTest.cpp  ProblemUpdateTest.cpp  SparseStorageTest.cpp
test/papilo/io/: MpsParserTest.cpp  PboParserTest.cpp
test/papilo/misc/: VectorUtilsTest.cpp
test/papilo/presolve/: CliqueMergingTest.cpp  CoefficientStrengtheningTest.cpp  ConstraintPropagationTest.cpp  DominatedColsTest.cpp  DualFixTest.cpp  DualInferTest.cpp  FixContinuousTest.cpp  FreeVarSubstitutionTest.cpp  GF2Test.cpp  ImplIntDetectionTest.cpp  ParallelColDetectionTest.cpp  ParallelRowDetectionTest.cpp  ProbingTest.cpp  SimpleProbingTest.cpp  SimpleSubstitutionTest.cpp  SimplifyInequalitiesTest.cpp  SingletonColsTest.cpp  SingletonStuffingTest.cpp  SparsifyTest.cpp
test/resources/: dual_fix_neg_inf.postsolve  dual_fix_pos_inf.postsolve  kb2.bas  kb2.postsolve  kb2_dual.solution  kb2_primal.solution  kb2_reduced.solution
(+105 files in other folders)
